# applications_sample_camera

./: README_zh.md  bundle.json
ai/asr/keyword_spotting/: BUILD.gn  audio_cache.cpp  audio_cache.h  kws_app.cpp  kws_manager.cpp  kws_manager.h
ai/cv/image_classification/: BUILD.gn  camera_manager.cpp  camera_manager.h  image_classification_sample.cpp  picture_utils.cpp  picture_utils.h  resize_computer.cpp  resize_computer.h
cameraApp/: BUILD.gn
cameraApp/cameraApp/src/main/cpp/: camera_ability_slice.cpp  camera_ability_slice.h  camera_manager.cpp  camera_manager.h  event_listener.h
gallery/: BUILD.gn
gallery/include/: event_listener.h  gallery_ability_slice.h  gallery_config.h  picture_ability_slice.h  player_ability_slice.h
gallery/src/: gallery_ability_slice.cpp  picture_ability_slice.cpp  player_ability_slice.cpp
hap/: BUILD.gn  camera.hap  gallery.hap  launcher.hap  setting.hap
launcher/: BUILD.gn
launcher/launcher/src/main/cpp/: app_info.cpp  app_info.h  app_manage.cpp  event_listener.h  long_press_view.cpp  long_press_view.h  main_ability_slice.cpp  main_ability_slice.h  native_base.h  swipe_view.cpp  swipe_view.h  time_weather_view.cpp  time_weather_view.h  ui_config.h  view_group_page.cpp  view_group_page.h
media/: BUILD.gn  audio_capture_sample.cpp  camera_sample.cpp  player_sample.cpp
setting/: BUILD.gn
setting/setting/src/main/cpp/: app_ability_slice.cpp  app_ability_slice.h  app_info_ability_slice.cpp  app_info_ability_slice.h  event_listener.h  main_ability_slice.cpp  main_ability_slice.h  setting_about_ability_slice.cpp  setting_about_ability_slice.h  setting_display_ability_slice.cpp  setting_display_ability_slice.h  setting_main_ability.cpp  setting_wifi_ability_slice.cpp  setting_wifi_ability_slice.h  setting_wifi_input_password_ability_slice.cpp  setting_wifi_input_password_ability_slice.h  wpa_work.c
