# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/hap_pack.gni")

shared_library("setting") {
    sources = [
        "setting/src/main/cpp/setting_main_ability.cpp",
        "setting/src/main/cpp/main_ability_slice.cpp",
        "setting/src/main/cpp/setting_about_ability_slice.cpp",
        "setting/src/main/cpp/setting_wifi_ability_slice.cpp",
        "setting/src/main/cpp/setting_wifi_input_password_ability_slice.cpp",
        "setting/src/main/cpp/setting_utils.cpp",
        "setting/src/main/cpp/app_info_ability_slice.cpp",
        "setting/src/main/cpp/app_ability_slice.cpp",
        "setting/src/main/cpp/wpa_work.c"
    ]

    deps = [
        "//foundation/aafwk/frameworks/ability_lite:aafwk_abilitykit_lite",
        "//foundation/appexecfwk/frameworks/bundle_lite:bundle",
        "//foundation/communication/frameworks/ipc_lite:liteipc_adapter",
        "//foundation/distributedschedule/services/samgr_lite/samgr:samgr",
        "//utils/native/lite/kv_store:kv_store",
        "//foundation/graphic/lite/frameworks/ui:ui",
        "//foundation/graphic/lite/utils:graphic_utils",
        "//foundation/graphic/lite/frameworks/surface",
        "//third_party/wpa_supplicant/wpa_supplicant-2.9:wpa_supplicant",
        "//base/startup/frameworks/syspara_lite/parameter:parameter"
    ]

    include_dirs = [
        "setting/src/main/cpp",
        "//foundation/aafwk/interfaces/kits/ability_lite",
        "//foundation/graphic/lite/interfaces/kits/ui/components",
        "//foundation/graphic/lite/interfaces/kits/ui",
        "//foundation/graphic/lite/interfaces/kits/utils",
        "//foundation/graphic/lite/interfaces/kits/config",
        "//foundation/appexecfwk/interfaces/kits/bundle_lite",
        "//foundation/aafwk/interfaces/kits/want_lite",
        "//base/startup/interfaces/kits/syspara_lite",
        "//base/security/interfaces/kits/iam_lite",
        "//third_party/wpa_supplicant/wpa_supplicant-2.9/src/common"
    ]

    ldflags = [
        "-lwpa",
        "-lwpa_client",
        "-lsysparam",
        "-lpms_client"
    ]

    defines = [
        "ENABLE_WINDOW=1",
        "ABILITY_WINDOW_SUPPORT",
        "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
    ]
}

lite_component("setting_component") {

    features = [
        ":setting",
    ]
}

hap_pack("setting_hap")
{
    deps = [":setting"]
    mode = "hap"
    json_path = "setting/src/main/config.json"
    ability_so_path = "$root_out_dir/libsetting.so"
    force = "true"
    cert_profile = "cert/com.huawei.setting_HarmonyAppProvision_release.p7b"
    resources_path = "setting/src/main/resources"
    hap_name = "setting"
}
